# time_tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  docker-compose.yaml.prod  pyproject.toml  pytest.ini
app/: celery.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  main.py  typehints.py
app/book/models/: __init__.py  book.py  category.py
app/entities/: employee.py  worktime.py
app/enums/: application_status.py  position.py
app/migrations/: env.py
app/models/: application.py  base.py
app/routers/: employee.py
app/schemas/: base.py  employee.py
docker/: Dockerfile
script/: celery.sh  create_module.sh  entrypoint.sh
